--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,25 +1,72 @@
-<h2>Sign up</h2>
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= f.error_notification %>
+<div class="pt-14 flex justify-center">
+  <%= image_tag 'Logo.png', alt:'logo', class:'w-16 rounded-full' %>
+</div>
 
-  <div class="form-inputs">
-    <%= f.input :email,
-                required: true,
-                autofocus: true,
-                input_html: { autocomplete: "email" }%>
-    <%= f.input :password,
-                required: true,
-                hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :password_confirmation,
-                required: true,
-                input_html: { autocomplete: "new-password" } %>
+<div class="pt-8 px-4">
+
+  <h1 class="px-8 text-center text-3xl font-medium">Enregistre ton compte</h1>
+
+  <div class="py-8 text-center">
+    <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <%= f.error_notification %>
+
+      <div class="space-y-4">
+
+        <%= f.input :first_name,
+                      required: false,
+                      label: false,
+                      placeholder: 'Prénom*',
+                      input_html: { class: "px-2 py-3 border-2 border-gray-200 w-full rounded-lg"} %>
+
+        <%= f.input :last_name,
+                      required: false,
+                      label: false,
+                      placeholder: 'Nom*',
+                      input_html: { class: "px-2 py-3 border-2 border-gray-200 w-full rounded-lg"} %>
+
+        <%= f.input :email,
+                      required: false,
+                      autofocus: true,
+                      input_html: { autocomplete: "email" },
+                      label: false,
+                      placeholder: 'Email*',
+                      input_html: { class: "px-2 py-3 border-2 border-gray-200 w-full rounded-lg"} %>
+
+        <%= f.input :password,
+                      required: false,
+                      input_html: { autocomplete: "current-password" },
+                      label: false,
+                      placeholder: 'Mot de passe*',
+                      input_html: { class: "px-2 py-3 border-2 border-gray-200 w-full rounded-lg"} %>
+
+        <%= f.input :password_confirmation,
+                      required: true,
+                      input_html: { autocomplete: "new-password" },
+                      placeholder: 'Mot de passe confirmation*',
+                      label: false,
+                      input_html: { class: "px-2 py-3 border-2 border-gray-200 w-full rounded-lg"} %>
+
+        <div class="pt-4 flex items-center">
+          <div class="mr-5 bg-gray-100 rounded-full h-12 overflow-hidden">
+            <svg class="w-12 h-12 text-gray-300" fill="currentColor" viewBox="0 0 24 24"><path d="M24 20.993V24H0v-2.996A14.977 14.977 0 0112.004 15c4.904 0 9.26 2.354 11.996 5.993zM16.002 8.999a4 4 0 11-8 0 4 4 0 018 0z" /></svg>
+          </div>
+
+
+          <%= f.input :photo, as: :file,
+                        label:  "Change",
+                        label_html: { class:"bg-white py-2 px-3 border border-gray-300 rounded-md shadow-sm text-sm leading-4 font-medium text-gray-600"},
+                        input_html: { class:"hidden"},
+                        id: "file-upload" %>
+        </div>
+      </div>
+
+      <div class="form-actions py-8">
+        <%= f.button :submit, "Crée ton compte", class:"w-full py-4 rounded-xl bg-black text-white font-bold text-lg" %>
+      </div>
+
+    <% end %>
+    <%= render "devise/shared/links" %>
+
   </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
