--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,6 @@
 <h1 class="text-red-800">toto</h1>
+
+<%= link_to "Log out", destroy_user_session_path, method: :delete %>
+
+<%= cl_image_tag current_user.photo.key, height: 300, width: 400, crop: :fill %>
+
