--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,11 @@
 <h1 class="text-red-800">toto</h1>
 
-<%= link_to "Log out", destroy_user_session_path, method: :delete %>
+<% if user_signed_in? %>
+  <%= link_to "Log out", destroy_user_session_path, method: :delete %>
+<% else %>
+  <%= link_to "Sign_up", new_user_registration_path %>
+  <%= link_to "Log in", new_user_session_path %>
+<% end %>
 
-<%= cl_image_tag current_user.photo.key, height: 300, width: 400, crop: :fill %>
+
 
