login/register forms front pretty ok

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,8 @@
+<div class="px-6 py-6">
+  <%= link_to root_path do %>
+  <button class="outline-none"><svg class="w-8" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 19l-7-7m0 0l7-7m-7 7h18"/></svg></button>
+  <% end %>
+</div>
 
 <div class="pt-14 flex justify-center">
   <%= image_tag 'Logo.png', alt:'logo', class:'w-16 rounded-full' %>
