--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -6,11 +6,11 @@
     <div class="pt-16 grid grid-cols-2 gap-4">
       <% @items.each do |item| %>
         <%= link_to item_path(item), class:"group" do %>
-        <div class="h-72 flex flex-col shadow-2xl rounded-xl overflow-hidden">
-          <div>
-            <%= cl_image_tag item.photos[0].key, class:'h-48 w-full object-cover '  %>
+        <div class="flex flex-col shadow-2xl rounded-xl overflow-hidden">
+          <div class="relative" style="padding-bottom: 80%">
+            <%= cl_image_tag item.photos[0].key, class:'absolute h-full w-full inset-0 object-cover shadow'  %>
           </div>
-          <div class="px-4 py-4">
+          <div class="px-4 py-4 h-24">
             <span class="text-sm"><%= item.title %></span>
           </div>
         </div>
