cart logic is good

--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -4,4 +4,4 @@
 <%= @item.title %>
 
 
-<%= button_to 'Ajouter au panier', '#'  %>
+<%= button_to 'Ajouter au panier', cart_items_path(item_id: @item) %>
