--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,2 +1,16 @@
+<div class="px-4 py-8">
+  <div class="pt-16 grid grid-cols-2 gap-4">
+    <% @cart.cart_items.each do |item| %>
+      <div class="flex flex-col shadow-2xl rounded-xl overflow-hidden">
+        <div class="relative" style="padding-bottom: 80%">
+          <%= cl_image_tag item.item.photos[0].key, class:'absolute h-full w-full inset-0 object-cover shadow'  %>
+        </div>
+        <div class="px-4 py-4 h-24">
+          <span class="text-sm"><%= item.item.title %></span>
+        </div>
+      </div>
+    <% end %>
+  </div>
+</div>
 
-show cart
+<%= button_to 'Vider le panier', @cart, method: :delete, data: { confirm: "Etes-vous sur?" } %>
