--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,6 @@
-<h1 class="text-red-800">toto</h1>
+<% unless current_user.nil? %>
+<h1 class="text-black text-xl font-bold">Hello <%= current_user.name %></h1>
+<% end %>
 
 <% if user_signed_in? %>
   <%= link_to "Log out", destroy_user_session_path, method: :delete %>
