--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,3 +1,5 @@
+<%= link_to "Continuer mes achats", items_path %>
+
 <div class="px-4 py-8">
   <div class="pt-16 grid grid-cols-2 gap-4">
     <% @cart.cart_items.each do |item| %>
@@ -7,6 +9,9 @@
         </div>
         <div class="px-4 py-4 h-24">
           <span class="text-sm"><%= item.item.title %></span>
+        </div>
+        <div>
+          <%= link_to 'Remove item', item, method: :delete, data:{ confirm: "are you sure?" } %>
         </div>
       </div>
     <% end %>
