added cart helper methods and view to see if user has a cart link to it and see how many items are on it

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,5 @@
+<%= render "shared/cart" %>
+
 <% unless current_user.nil? %>
 <h1 class="text-black text-xl font-bold">Hello <%= current_user.name %></h1>
 <% end %>
