--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -15,6 +15,9 @@
           <div class="px-4 py-4 h-24">
             <span class="text-sm"><%= item.title %></span>
           </div>
+          <div>
+            <span> <%= humanized_money_with_symbol(item.price) %> </span>
+          </div>
         </div>
         <% end %>
       <% end %>
