--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -2,6 +2,7 @@
 
 <%= cl_image_tag @item.photos[0].key, class:'h-48'  %>
 <%= @item.title %>
+<%= humanized_money_with_symbol(@item.price) %>
 
 
 <%= button_to 'Ajouter au panier', cart_items_path(item_id: @item) %>
