--- a/app/views/adresses/edit.html.erb
+++ b/app/views/adresses/edit.html.erb
@@ -1,6 +1,60 @@
-<%= simple_form_for [current_user, @adress] do |f| %>
+<div class="px-6 py-4">
+  <%= link_to root_path do %>
+  <button class="outline-none"><svg class="w-8" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 19l-7-7m0 0l7-7m-7 7h18"/></svg></button>
+  <% end %>
+</div>
 
-<%= f.button :submit, "Valider" %>
+<div class="pt-2 flex justify-center">
+  <%= image_tag 'Logo.png', alt:'logo', class:'w-16 rounded-full' %>
+</div>
 
-<% end %>
 
+<div class="pt-6 px-4">
+  <h1 class="px-8 text-center text-3xl font-medium">Adresse de livraison</h1>
+  <div class="py-8 text-center">
+    <%= simple_form_for [current_user, @adress] do |f| %>
+      <div class="space-y-6">
+
+      <%= f.input :street,
+                  required: false,
+                  autofocus: true,
+                  label: false,
+                  placeholder: '18 rue saint marcelin',
+                  input_html: { class: "px-2 py-4 border-2 border-gray-200 w-full rounded-lg"} %>
+
+      <%= f.input :street_detail,
+                  required: false,
+                  label: false,
+                  placeholder: "Complément d'adresse",
+                  input_html: { class: "px-2 py-4 border-2 border-gray-200 w-full rounded-lg"} %>
+
+      <%= f.input :zipcode,
+                  required: false,
+                  label: false,
+                  placeholder: "75000",
+                  input_html: { class: "px-2 py-4 border-2 border-gray-200 w-full rounded-lg"} %>
+
+      <%= f.input :city,
+                  required: false,
+                  label: false,
+                  placeholder: "Paris",
+                  input_html: { class: "px-2 py-4 border-2 border-gray-200 w-full rounded-lg"} %>
+
+      <%= f.input :country,
+                  collection: ['France(métropolitaine)'],
+                  required: false,
+                  label: false,
+                  input_html: { class: "px-2 py-4 border-2 border-gray-200 w-full rounded-lg"} %>
+
+      <%= f.input :phone,
+                  required: false,
+                  label: false,
+                  placeholder: "0601020304",
+                  input_html: { class: "px-2 py-4 border-2 border-gray-200 w-full rounded-lg"} %>
+
+
+      <%= f.button :submit, "Valider" %>
+
+    <% end %>
+
+</div>
