--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,12 +6,4 @@
 <h1 class="text-black text-xl font-bold">Hello <%= current_user.name %></h1>
 <% end %>
 
-<% if user_signed_in? %>
-  <%= link_to "Log out", destroy_user_session_path, method: :delete %>
-<% else %>
-  <%= link_to "Sign_up", new_user_registration_path %>
-  <%= link_to "Log in", new_user_session_path %>
-<% end %>
-
-<%= link_to "Magasin", items_path %>
-
+<%= image_tag "https://images.unsplash.com/photo-1609502514041-98e64ceb92a7?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=564&q=80" %>
