--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,8 +2,17 @@
 
 <%= render "shared/cart" %>
 
-<% unless current_user.nil? %>
-<h1 class="text-black text-xl font-bold">Hello <%= current_user.name %></h1>
-<% end %>
+<div class="h-screen bg-cover bg-center text-center" style="background-image:url(https://images.unsplash.com/photo-1609502514041-98e64ceb92a7?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=564&q=80);">
+  <div class="pt-40 px-12">
+    <h1 class="text-white text-3xl font-semibold ">Objets en céramique faits main</h1>
+  </div>
+  <div class="pt-48">
+    <%= link_to items_path do %>
+      <button class="px-6 py-4 rounded-xl text-white border-2 border-white font-semibold hover:bg-white hover:text-gray-700">Découvrir</button>
+    <% end %>
+  </div>
+</div>
+<div class="pt-12">
+  <h2 class="text-center text-2xl font-semibold">Collections</h2>
+</div>
 
-<%= image_tag "https://images.unsplash.com/photo-1609502514041-98e64ceb92a7?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=564&q=80" %>
