--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,12 @@
 
 <%= render "shared/cart" %>
 
-<div class="h-screen bg-cover bg-center text-center" style="background-image:url(https://images.unsplash.com/photo-1609502514041-98e64ceb92a7?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=564&q=80);">
+<div data-controller="stickylogo" data-action="scroll@window->stickylogo#onScroll" class="relative h-screen bg-cover bg-center text-center" style="background-image:url(https://images.unsplash.com/photo-1609502514041-98e64ceb92a7?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=564&q=80);">
+  <div data-stickylogo-target="stickylogo" class="opacity-0 sticky inset-0 px-4">
+    <%= link_to root_path do %>
+      <%= image_tag "Logo_sticky.png" %>
+    <% end %>
+  </div>
   <div class="pt-40 px-12">
     <h1 class="text-white text-3xl font-semibold ">Objets en céramique faits main</h1>
   </div>
