--- a/app/views/shared/_navbar_mobile.html.erb
+++ b/app/views/shared/_navbar_mobile.html.erb
@@ -1,5 +1,5 @@
 <header data-controller="menu">
-  <div class="flex items-center justify-between bg-gray-50 py-1 px-2">
+  <div class="flex items-center justify-between bg-gray-50 py-1 px-2 shadow">
     <div>
       <%= link_to root_path do %>
         <%= image_tag "Logo.png" %>
