--- a/app/views/shared/_menu_before_login.html.erb
+++ b/app/views/shared/_menu_before_login.html.erb
@@ -1,4 +1,4 @@
-<div data-menu-target="toggleable" class="hidden flex flex-col px-2 py-4 space-y-3">
+<div data-menu-target="toggleable" class="hidden flex flex-col px-2 py-4 space-y-3 bg-gray-100">
   <div class="flex items-center space-x-6">
     <svg class="w-8 h-8" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M18 9v3-3zm0 3v3-3zm0 0h3-3zm0 0h-3 3zm-5-5a4 4 0 11-8 0 4 4 0 018 0v0zM3 20a6 6 0 1112 0v1H3v-1z" stroke="#D97862" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
     <%= link_to "Sign_up", new_user_registration_path, class:"text-lg font-semibold text-gray-700 " %>
