--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
 
 <%= render "shared/cart" %>
 
-<div data-controller="stickylogo" data-action="scroll@window->stickylogo#onScroll" class="relative h-screen bg-cover bg-center text-center" style="background-image:url(https://images.unsplash.com/photo-1609502514041-98e64ceb92a7?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=564&q=80);">
+<div data-controller="stickylogo" data-action="scroll@window->stickylogo#onScroll" class=" h-screen bg-cover bg-center text-center" style="background-image:url(https://images.unsplash.com/photo-1609502514041-98e64ceb92a7?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=564&q=80);">
   <div data-stickylogo-target="stickylogo" class="opacity-0 sticky inset-0 px-4">
     <%= link_to root_path do %>
       <%= image_tag "Logo_sticky.png" %>
@@ -13,11 +13,12 @@
   </div>
   <div class="pt-48">
     <%= link_to items_path do %>
-      <button class="px-6 py-4 rounded-xl text-white border-2 border-white font-semibold hover:bg-white hover:text-gray-700">Découvrir</button>
+      <button class="px-6 py-4 rounded-xl text-white border-2 border-white font-semibold hover:bg-white hover:text-japonica-500">Découvrir</button>
     <% end %>
   </div>
 </div>
 <div class="pt-12">
   <h2 class="text-center text-2xl font-semibold">Collections</h2>
 </div>
+
 
