--- a/app/views/shared/_navbar_mobile.html.erb
+++ b/app/views/shared/_navbar_mobile.html.erb
@@ -1,13 +1,14 @@
 <header data-controller="menu">
-  <div class="flex items-center justify-between bg-gray-100 py-1 px-2 shadow">
+  <div class="flex items-center justify-between bg-gray-100 py-2 px-2 shadow">
     <div>
       <%= link_to root_path do %>
         <%= image_tag "Logo.png" %>
       <% end %>
     </div>
 
-    <div>
-      <h2 class="text-gray-600 font-bold text-2xl">MabciaCeramic</h2>
+    <div class="flex">
+      <h2 class="text-gray-600 font-bold text-2xl">Mabcia</h2>
+      <h2 class="text-japonica-500 font-bold text-2xl">Ceramic</h2>
     </div>
 
     <div  class="flex items-center outline-none">
