--- a/app/views/shared/_navbar_mobile.html.erb
+++ b/app/views/shared/_navbar_mobile.html.erb
@@ -12,8 +12,9 @@
     </div>
 
     <div  class="flex items-center outline-none">
-      <button data-action="click->menu#toggle" id="options-menu" class="text-gray-600 focus:outline-none hover:text-gray-400 focus:text-gray-400">
-        <svg class="w-8 z-40" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"/></svg>
+      <button data-action="click->menu#toggle" id="options-menu" class="text-gray-600 focus:outline-none hover:text-gray-400">
+        <svg data-menu-target="open" class="w-8 " xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"/></svg>
+        <svg data-menu-target="close" class="w-8 hidden" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"/></svg>
       </button>
 
     </div>
