--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,6 +1,12 @@
 
-      <h1>Order #<%= @order.id %> <small><span class="badge badge-primary"><%= @order.state %></span></small></h1>
+      <h1>Order #<%= @order.id %> <small><span class="badge badge-primary"><%= @order.status %></span></small></h1>
       <p>Estimated delivery in <strong>2 business days</strong></p>
+      <% @order.cart.cart_items.each do |cart_item| %>
+        <li><strong>ITEM</strong> <%= cart_item.item.title %> <strong> PRICE</strong> <%= humanized_money_with_symbol cart_item.item.price %></li>
+      <% end %>
+        <li><strong>TOTAL</strong> <%= humanized_money_with_symbol @order.amount %></li>
+        </li>
+      </ul>
     </div>
   </div>
 </div>
