--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -13,8 +13,65 @@
     <% end %>
   </div>
 </div>
-<div class="pt-12">
-  <h2 class="text-center text-2xl font-semibold">Collections</h2>
+<div class="px-4 bg-gray-100">
+  <div class="pt-12">
+    <h2 class="text-center text-2xl font-semibold">Mon atelier en quelques lignes</h2>
+  </div>
+
+  <div class="flex flex-col pt-8 px-6 space-y-8">
+
+    <div class="bg-white rounded-t-xl overflow-hidden shadow-2xl">
+      <div class="relative" style="padding-bottom: 80%;">
+        <%= image_tag "licorne.png", class:'absolute h-full w-full inset-0 object-cover object-top shadow' %>
+      </div>
+      <div class="px-4 py-4">
+        <div class="pt-1">
+          <span class="text-gray-700 text-xl font-bold">Des objects uniques</span>
+        </div>
+        <div class="pt-1">
+          <span class="text-japonica-500 text-sm uppercase tracking-wide font-bold">Sur-mesure</span>
+        </div>
+        <div class="pt-3">
+          <span class="font-medium">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam porro modi sed, voluptatum</span>
+        </div>
+      </div>
+    </div>
+
+    <div class="bg-white rounded-t-xl overflow-hidden shadow-2xl">
+      <div class="relative" style="padding-bottom: 80%;">
+        <%= image_tag "faitmain.png", class:'absolute h-full w-full inset-0 object-cover object-top shadow' %>
+      </div>
+      <div class="px-4 py-4">
+        <div class="pt-1">
+          <span class="text-gray-700 text-xl font-bold">Fait à la main</span>
+        </div>
+        <div class="pt-1">
+          <span class="text-japonica-500 text-sm uppercase tracking-wide font-bold">Meilleurs materiaux</span>
+        </div>
+        <div class="pt-3">
+          <span class="font-medium">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam porro modi sed, voluptatum</span>
+        </div>
+      </div>
+    </div>
+
+    <div class="bg-white rounded-t-xl overflow-hidden shadow-2xl">
+      <div class="relative" style="padding-bottom: 80%;">
+        <%= image_tag "livraison.png", class:'absolute h-full w-full inset-0 object-cover object-top shadow' %>
+      </div>
+      <div class="px-4 py-4">
+        <div class="pt-1">
+          <span class="text-gray-700 text-xl font-bold">Livraison gratuite et rapide</span>
+        </div>
+        <div class="pt-1">
+          <span class="text-japonica-500 text-sm uppercase tracking-wide font-bold">Lorem ipsum</span>
+        </div>
+        <div class="pt-3">
+          <span class="font-medium">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam porro modi sed, voluptatum</span>
+        </div>
+      </div>
+    </div>
+
+  </div>
 </div>
 
 
