--- a/app/views/adresses/edit.html.erb
+++ b/app/views/adresses/edit.html.erb
@@ -1,19 +1,19 @@
-<div class="px-6 py-4">
+<div class="px-6 py-2">
   <%= link_to root_path do %>
   <button class="outline-none"><svg class="w-8" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 19l-7-7m0 0l7-7m-7 7h18"/></svg></button>
   <% end %>
 </div>
 
-<div class="pt-2 flex justify-center">
+<div class="flex justify-center">
   <%= image_tag 'Logo.png', alt:'logo', class:'w-16 rounded-full' %>
 </div>
 
 
 <div class="pt-6 px-4">
-  <h1 class="px-8 text-center text-3xl font-medium">Adresse de livraison</h1>
+  <h1 class="px-6 text-center text-3xl font-medium">Adresse de livraison</h1>
   <div class="py-8 text-center">
     <%= simple_form_for [current_user, @adress] do |f| %>
-      <div class="space-y-6">
+      <div class="space-y-3">
 
       <%= f.input :street,
                   required: false,
@@ -53,7 +53,9 @@
                   input_html: { class: "px-2 py-4 border-2 border-gray-200 w-full rounded-lg"} %>
 
 
-      <%= f.button :submit, "Valider" %>
+      <div class="pt-2">
+        <%= f.button :submit, "Valider", class:'w-full font-medium bg-black text-white py-3 rounded-3xl' %>
+      </div>
 
     <% end %>
 
