added navbar light for item show

--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,4 +1,6 @@
 
+<%= render "shared/navbar_light" %>
+
 <div class="px-2 py-4">
   <div class="flex justify-between">
     <span class="font-bold text-lg"><%= @item.title %></span>
