--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
 
   <body>
     <% if !current_page?(controller: 'devise/sessions', action: 'new') && !current_page?(controller: 'registrations', action: 'new') %>
-      <%= render "shared/navbar_mobile" %>
+      <%= render "shared/navbar_mobile" unless @disable_nav %>
     <% end %>
     <%= yield %>
   </body>
