--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -2,7 +2,7 @@
 
 
 <div class="py-10">
-  <h2 class="text-3xl font-bold text-left pb-2 px-4">Mes créations</h2>
+  <h2 class="text-3xl font-bold text-left pb-2 px-4 text-gray-800">Mes créations du moment</h2>
 
   <%= form_tag items_path, class:'flex items-center border-b-2 border-gray-200 mx-4', method: :get do %>
     <div><svg class="w-6 text-gray-500"xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"><path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd"/></svg></div>
@@ -30,15 +30,16 @@
   <div class="pt-8 grid grid-cols-2 gap-4 px-4">
     <% @items.each do |item| %>
       <%= link_to item_path(item), class:"group" do %>
-      <div class="flex flex-col shadow-3xl rounded-t-xl overflow-hidden">
+      <div class="flex flex-col shadow-3xl rounded-t-xl overflow-hidden pb-2 h-64">
         <div class="relative" style="padding-bottom: 80%">
           <%= cl_image_tag item.photos[0].key, class:'absolute h-full w-full inset-0 object-cover shadow'  %>
         </div>
-        <div class="px-4 py-2">
+        <div class="px-2 py-2 flex-grow">
           <span class="text-sm"><%= item.title %></span>
         </div>
-        <div>
-          <span class="px-4 font-bold"> <%= humanized_money_with_symbol(item.price) %> </span>
+        <div class="px-2 flex justify-between items-center">
+          <span class="font-bold"> <%= humanized_money_with_symbol(item.price) %> </span>
+          <span class="rounded-full py-1 px-2 bg-japonica-500 text-white text-xs font-bold">Objet unique</span>
         </div>
       </div>
       <% end %>
