few front modif

--- a/app/views/adresses/edit.html.erb
+++ b/app/views/adresses/edit.html.erb
@@ -44,7 +44,7 @@
                   collection: ['France(métropolitaine)'],
                   required: false,
                   label: false,
-                  input_html: { class: "px-2 py-4 border-2 border-gray-200 w-full rounded-lg"} %>
+                  input_html: { class: "px-2 py-4 border-2 w-full rounded-lg"} %>
 
       <%= f.input :phone,
                   required: false,
