--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -33,11 +33,11 @@
       <span>Matériaux</span>
     </div>
     <div class="pt-2">
-      <span class="text-lg">  <%= @item.materials.join(', ') %> </span>
+      <span class="text-xl font-medium">  <%= @item.materials.join(', ') %> </span>
     </div>
 
     <div class="pt-2">
-      <span>Description</span>
+      <div>Description :</div>
       <span class="pt-2"><%= @item.description %></span>
     </div>
 
