--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
   <%= render "shared/sticky_logo" %>
 
   <div class=" h-screen bg-cover bg-center text-center" style="background-image:url(https://images.unsplash.com/photo-1609502514041-98e64ceb92a7?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=564&q=80);">
-    <div class="pt-32 px-5">
+    <div class="pt-32 px-2">
       <h1 class="text-white text-4xl font-semibold ">Objets en céramique faits main</h1>
     </div>
     <div class="pt-32">
@@ -11,7 +11,7 @@
       <% end %>
     </div>
   </div>
-  <div class="px-4 bg-gray-100">
+  <div class="px-4 bg-gray-200">
     <div class="pt-12">
       <h2 class="text-center text-3xl font-semibold">Mon atelier en quelques lignes</h2>
     </div>
@@ -75,7 +75,7 @@
 
   <div class="flex flex-col items-center pt-4 pb-8 space-y-8">
     <div class="pt-6">
-      <h2 class="uppercase text-xl font-bold">Exclusive collection</h2>
+      <h2 class="text-3xl font-bold">Collection exclusive </h2>
     </div>
 
     <div class="rounded-t-xl w-full px-16">
@@ -121,7 +121,7 @@
     </div>
   </div>
 
-  <div class="flex flex-col items-center pt-4 pb-8 bg-gray-100">
+  <div class="flex flex-col items-center pt-4 pb-8 bg-gray-200">
     <div class="text-center pt-8">
       <h2 class="font-bold text-3xl">Gallery</h2>
     </div>
