--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -77,10 +77,10 @@
 
     </div>
   </div>
-  <div class="pt-2 flex justify-between items-center">
-    <svg class="w-24 h-24" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 89 1"><path stroke="#A09F9F" d="M0 .5h89"/></svg>
+  <div class="flex justify-between items-center">
+    <svg class="w-24 h-16" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 89 1"><path stroke="#A09F9F" d="M0 .5h89"/></svg>
     <span class="text-sm text-center">Déjà inscris ?</span>
-    <svg class="w-24 h-24" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 89 1"><path stroke="#A09F9F" d="M0 .5h89"/></svg>
+    <svg class="w-24 h-16" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 89 1"><path stroke="#A09F9F" d="M0 .5h89"/></svg>
   </div>
   <div class="flex justify-center pb-12">
     <%= link_to  new_user_session_path do %>
