--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -7,7 +7,7 @@
   </div>
 
   <div class="pt-2 flex justify-center">
-    <%= image_tag 'Logo.png', alt:'logo', class:'w-16 rounded-full' %>
+    <%= image_tag 'Logo.png', alt:'logo', class:'w-16 h-16 rounded-full' %>
   </div>
 
   <div class="pt-8">
