add dynamic front to item shop

--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -8,8 +8,8 @@
     <span class="text-xl font-medium"><%= pluralize(cart_count_over_one, 'article') %> dans votre panier</span>
   </div>
   <div class="pt-6 flex justify-between">
-    <span>Total(<%= pluralize(cart_count_over_one, 'article') %>)</span>
-    <span><%= humanized_money_with_symbol(@cart.total_price) %></span>
+    <span class="font-medium">Total(<%= pluralize(cart_count_over_one, 'article') %>)</span>
+    <span class="font-medium"><%= @cart.total_price %>€</span>
   </div>
   <div class="pt-4">
     <%= form_tag orders_path do %>
@@ -28,12 +28,12 @@
 
 
         </div>
-        <div class="text-justify pt-3">
+        <div class="text-justify pt-2">
           <span class="pt-4"><%= cart_item.item.description[0..180] %></span>
 
           <div class="flex justify-between pt-4">
-            <span class="font-bold text-gray-700"><%= link_to 'supprimer', cart_item, method: :delete, data:{ confirm: "are you sure?" } %></span>
-            <span class="font-bold"> <%= humanized_money_with_symbol(cart_item.item.price) %></span>
+            <span class="font-bold text-gray-500"><%= link_to 'Supprimer', cart_item, method: :delete, data:{ confirm: "are you sure?" } %></span>
+            <span class="font-bold"> <%= cart_item.item.price %>€</span>
 
 
           </div>
