--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -4,7 +4,7 @@
 <div class="px-2 py-4">
   <div class="flex justify-between">
     <span class="font-bold text-lg"><%= @item.title %></span>
-    <span class="text-japonica-500"><%= @item.category %></span>
+    <span class="text-japonica-500 font-medium"><%= @item.category %></span>
   </div>
   <div class="pt-2">
     <%= cl_image_tag @item.photos[0].key, class:'w-full rounded-xl'  %>
@@ -13,7 +13,7 @@
     <span class="font-bold text-2xl"><%= @item.price %>€</span>
   </div>
   <div class="pt-2">
-    <span class="px-2 py-1 bg-japonica-500 rounded-2xl text-white">Pièce unique</span>
+    <span class="px-2 py-1 bg-japonica-500 rounded-full text-white">Pièce unique</span>
   </div>
   <div class="pt-4">
     <%= @item.description[0...197] %>
@@ -39,20 +39,23 @@
           <svg class="w-6" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M18.1 5.76c.7 1.632.9 3.456.4 5.376-.8 3.264-3.5 5.856-6.9 6.624-2 .48-3.9.192-5.6-.384v1.344l1.5 1.44h12l1.5-1.44V7.2l-1.5-1.44h-1.4z" fill="#000"/><path d="M9.5 1.92C5.4 1.92 2 5.184 2 9.12c0 3.936 3.4 7.2 7.5 7.2s7.5-3.264 7.5-7.2c0-3.936-3.4-7.2-7.5-7.2zM7.8 14.4a5.64 5.64 0 01-1.7-.864l8-7.68c.4.48.7 1.056.9 1.632L7.8 14.4zm3.4-10.56c.6.192 1.2.48 1.7.864l-8 7.68c-.4-.48-.7-1.056-.9-1.632l7.2-6.912zM9 3.648L3.8 8.64C4 5.952 6.2 3.84 9 3.648zm1 10.944L15.2 9.6c-.2 2.688-2.4 4.8-5.2 4.992z" fill="#000"/>
           <span>Matériaux</span>
         </div>
-        <div class="pt-2">
+        <div class="pt-1">
           <span class="text-xl font-medium">  <%= @item.materials.join(', ') %> </span>
         </div>
 
-        <div class="pt-2">
-          <div>Description :</div>
-          <span class="pt-2"><%= @item.description %></span>
-        </div>
-
-        <div class="pt-12 flex flex-col">
+        <div class="pt-6 flex flex-col">
           <span>Largeur: <%= @item.width / 10 %> cm</span>
           <span>Longueur: <%= @item.length / 10 %> cm</span>
           <span>Hauteur: <%= @item.height / 10 %> cm</span>
         </div>
+
+        <div class="pt-6">
+          <div class="font-semibold">Description</div>
+          <div class="pt-2">
+            <span><%= @item.description %></span>
+          </div>
+        </div>
+
       </div>
     </div>
   </div>
