--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -17,14 +17,38 @@
 
   <div class="overflow-x-auto mt-3 ml-2 bg-gray-300">
     <div class="inline-flex space-x-3 items-center text-center">
-      <%= link_to 'Tout voir', items_path, class:'pl-4 w-28 py-4 font-bold text-japonica-500 ' %>
-      <%= link_to 'Aquarium', items_path(category: 'Aquarium'), class:'pl-4 w-28 py-4 font-medium text-gray-600' %>
-      <%= link_to 'Photophores', items_path(category: 'Photophores'), class:'pl-4 py-4 w-28 font-medium text-gray-600' %>
-      <%= link_to 'Sculptures', items_path(category: 'Sculptures'), class:'pl-4 w-28 py-4 font-medium text-gray-600' %>
-      <%= link_to 'Pots, coupes', items_path(category: 'Pots, coupes'), class:'pl-4 py-4 w-28 font-medium text-gray-600' %>
-      <%= link_to 'Cuisine', items_path(category: 'Cuisine'), class:'pl-4 w-28 py-4 font-medium text-gray-600 ' %>
-      <%= link_to 'Décoration', items_path(category: 'Décoration'), class:'pl-4 py-4 w-28 font-medium text-gray-600' %>
-      <%= link_to 'Extérieur', items_path(category: 'Extérieur'), class:'pl-4 py-4 w-28 font-medium text-gray-600' %>
+
+      <div class="<%= params[:category] == nil ? 'w-28 py-4 font-bold text-japonica-500' : 'pl-4 w-28 py-4 font-medium text-gray-600' %>">
+        <%= link_to 'Tout voir', items_path %>
+      </div>
+
+      <div class="<%= params[:category] == 'Aquarium' ? 'w-28 py-4 font-bold text-japonica-500' : 'pl-4 w-28 py-4 font-medium text-gray-600' %>">
+        <%= link_to 'Aquarium', items_path(category: 'Aquarium') %>
+      </div>
+
+      <div class="<%= params[:category] == 'Photophores' ? 'w-28 py-4 font-bold text-japonica-500' : 'pl-4 w-28 py-4 font-medium text-gray-600' %>">
+        <%= link_to 'Photophores', items_path(category: 'Photophores') %>
+      </div>
+
+      <div class="<%= params[:category] == 'Sculptures' ? 'w-28 py-4 font-bold text-japonica-500' : 'pl-4 w-28 py-4 font-medium text-gray-600' %>">
+        <%= link_to 'Sculptures', items_path(category: 'Sculptures') %>
+      </div>
+
+      <div class="<%= params[:category] == 'Pots, coupes' ? 'w-28 py-4 font-bold text-japonica-500' : 'pl-4 w-28 py-4 font-medium text-gray-600' %>">
+        <%= link_to 'Pots, coupes', items_path(category: 'Pots, coupes') %>
+      </div>
+
+      <div class="<%= params[:category] == 'Cuisine' ? 'w-28 py-4 font-bold text-japonica-500' : 'pl-4 w-28 py-4 font-medium text-gray-600' %>">
+        <%= link_to 'Cuisine', items_path(category: 'Cuisine') %>
+      </div>
+
+      <div class="<%= params[:category] == 'Décoration' ? 'w-28 py-4 font-bold text-japonica-500' : 'pl-4 w-28 py-4 font-medium text-gray-600' %>">
+        <%= link_to 'Décoration', items_path(category: 'Décoration') %>
+      </div>
+
+      <div class="<%= params[:category] == 'Extérieur' ? 'w-28 py-4 font-bold text-japonica-500' : 'pl-4 w-28 py-4 font-medium text-gray-600' %>">
+        <%= link_to 'Extérieur', items_path(category: 'Extérieur') %>
+      </div>
     </div>
   </div>
   <div class="pt-4 grid grid-cols-2 gap-2 px-2">
